fix: wrap chat message text in case of etremely long unbroken string

--- a/src/frontend/main-ui/src/pages/chatPage/ChatPage.scss
+++ b/src/frontend/main-ui/src/pages/chatPage/ChatPage.scss
@@ -34,6 +34,10 @@
 				padding: 5px 10px;
 				border-radius: 10px;
 				width: fit-content;
+				max-width: 100%;
+				white-space: pre-wrap;
+				overflow-wrap: anywhere;
+				word-break: break-word;
 
 				&.loadingMessage {
 					font-style: italic;
